--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <html>
   <head>
     <title>RPS</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
-    <button class="choice" id="rock">Rock</button>
-    <button class="choice" id="paper">Paper</button>
-    <button class="choice" id="scissors">Scissors</button>
-
+    <section class="container">
+      <button class="choice col-left" id="rock">
+        <img src="https://st.depositphotos.com/1865899/3921/v/450/depositphotos_39216319-stock-illustration-hand-in-rock-n-roll.jpg">
+      </button>
+      <button class="choice col-mid" id="paper">
+        <img src="https://4.imimg.com/data4/DB/IO/MY-35192488/a4-paper-250x250.jpg">
+      </button>
+      <button class="choice col-right" id="scissors">
+          <img src="https://cdn1.creativememories.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/s/c/scissors1.jpg">
+      </button>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
